--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express": "4.8.x",
     "method-override": "^2.1.3",
     "morgan": "^1.2.3",
-    "serve-favicon": "^2.0.1"
+    "openrov-pluginloader": "^0.1.0",
+    "optimist": "^0.6.1",
+    "serve-favicon": "^2.0.1",
+    "socket.io": "^1.0.6"
   }
 }
