--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "angular": "~1.2.22",
     "angular-resource": "~1.2.22",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.11.1"
   },
   "devDependencies": {}
 }
