--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-resource": "~1.2.22",
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
-    "jquery-ui": "~1.11.1"
+    "jquery-ui": "~1.11.1",
+    "angular-route": "~1.2.23"
   },
   "devDependencies": {}
 }
